manifests/ns-rsshub/recipes/browserless.yaml
apiVersion: v1
kind: Service
metadata:
  name: browserless
  namespace: rsshub
  labels:
    app: browserless
spec:
  type: ClusterIP
  ports:
    - name: api
      port: 3000
      targetPort: api
  selector:
    app: rsshub
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: browserless
  namespace: rsshub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: browserless
  template:
    metadata:
      labels:
        app: browserless
    spec:
      containers:
      - name: browserless
        image: browserless/chrome:latest
        imagePullPolicy: IfNotPresent
        ports:
            - name: api
              containerPort: 3000
        resources:
          requests:
            cpu: 30m
            memory: 32Mi
          limits:
            cpu: 2000m
            memory: 512Mi
