manifests/ns-rsshub/recipes/redis.yaml
# kind: PersistentVolumeClaim
# apiVersion: v1
# metadata:
#   name: redis
#   namespace: rsshub
#   labels:
#     app: redis
# spec:
#   storageClassName: rook-nfs-default
#   accessModes:
#     - "ReadWriteOnce"
#   resources:
#     requests:
#       storage: "1Gi"
# ---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: rsshub
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      containers:
        - name: redis
          image: "bitnami/redis:5.0.0-r0"
          imagePullPolicy: IfNotPresent
          ports:
            - name: redis
              containerPort: 6379
          livenessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - redis-cli
                - ping
            initialDelaySeconds: 5
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 100m
              memory: 32Mi
            limits:
              cpu: 1000m
              memory: 1024Mi
          # volumeMounts:
          # - name: redis-data
          #   mountPath: /bitnami
          #   subPath:
        - name: metrics
          image: "oliver006/redis_exporter:v0.11"
          imagePullPolicy: IfNotPresent
          ports:
            - name: metrics
              containerPort: 9121
          resources:
            requests:
              cpu: 30m
              memory: 32Mi
            limits:
              cpu: 100m
              memory: 64Mi
      # volumes:
      # - name: redis-data
      #   persistentVolumeClaim:
      #     claimName: redis

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: rsshub
  labels:
    app: redis
  annotations:
    prometheus.io/port: "9121"
    prometheus.io/scrape: "true"
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      targetPort: redis
    - name: metrics
      port: 9121
      targetPort: metrics
  selector:
    app: redis
---
# 이 네트워크 정책을 활성화하면 ELB를 통해 Redis에 접근하는 기능도 막힌다.
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: redis-allow
  namespace: rsshub
spec:
  podSelector:
    matchLabels:
      app: redis
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: rsshub
    - from:
        - namespaceSelector:
            matchLabels:
              name: monitoring
